--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Stop"/>
+    <Button
+        android:layout_below="@id/stop_button"
+        android:id="@+id/send_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SendBroadcast"/>
 
 </RelativeLayout>
